Bug 266126 - Renaming single file needs to be confirmed twice
Summary: Renaming single file needs to be confirmed twice
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: AdvancedRename-dialog (other bugs)
Version First Reported In: 1.9.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-12 11:05 UTC by Simon
Modified: 2022-02-01 06:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon 2011-02-12 11:05:04 UTC
Version:           1.9.0 (using KDE 4.5.5) 
OS:                Linux

When renaming a file, in this case a .MOV file (around 200 MB), I always have to press Enter twice. It seems like a concurrency problem: When entering a new name, it takes about one second until the «New Name» field is updated. If I press Enter before it is updated, nothing happens. Then I have to press Enter again. 

Reproducible: Always




OS: Linux (x86_64) release 2.6.37-0.slh.7-aptosid-amd64
Compiler: cc
Comment 1 Andi Clemens 2011-03-05 19:00:06 UTC
Git commit 2683847b38cf28c1c42d81d591bccda60455cd4c by Andi Clemens.
Committed on 05/03/2011 at 18:56.
Pushed by aclemens into branch 'master'.

Set the parse timer duration to a smaller amount in singleFile mode

BUG: 266126

M  +1    -0    utilities/advancedrename/advancedrenamedialog.cpp     
M  +10   -0    utilities/advancedrename/advancedrenameinput.cpp     
M  +2    -0    utilities/advancedrename/advancedrenameinput.h     
M  +5    -0    utilities/advancedrename/advancedrenamewidget.cpp     
M  +4    -0    utilities/advancedrename/advancedrenamewidget.h     

http://commits.kde.org/digikam/2683847b38cf28c1c42d81d591bccda60455cd4c
Comment 2 Simon 2011-03-17 15:27:01 UTC
Thanks for fixing!