Set the parse timer duration to a smaller amount in singleFile mode

BUG: 266126